kubernetes/apps/security/infisical/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
  namespace: security
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  hostnames:
    - infisical.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infisical
          namespace: security
          port: 8080
